--- a/updated_frontend_new/src/app/globals.css
+++ b/updated_frontend_new/src/app/globals.css
@@ -1,23 +1,18 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+      
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Open Sans", sans-serif !important;
-  
 }
 
-body{
- width: 100vw;
+body {
+  width: 100vw;
   height: 100vh;
   margin: 0;
-
 }
 
-
-p{
+p {
   margin: 0;
-  
 }
